--- a/config/config.json
+++ b/config/config.json
@@ -9,7 +9,7 @@
     "test": {
         "username": "root",
         "password": null,
-        "database": "passport_demo",
+        "database": "testDB",
         "host": "127.0.0.1",
         "dialect": "mysql"
     },
