--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
     "dot-notation": "error",
     "eqeqeq": "error",
     "implicit-arrow-linebreak": ["error", "beside"],
-    "indent": ["error", 2],
+    "indent": ["error", 4],
     "no-duplicate-case": "error",
     "no-else-return": "error",
     "no-empty": "error",
@@ -35,6 +35,6 @@
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
     "vars-on-top": "error",
-    "yoda": "error"
+    "yoda": "error",
   }
 }
