--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.21.0",
         "bcryptjs": "2.4.3",
         "express": "^4.17.0",
+        "express-handlebars": "^5.2.0",
         "express-session": "^1.16.1",
+        "handlebars": "^4.7.6",
+        "moment": "^2.29.1",
         "mysql2": "^2.2.5",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
